[package]
name = "leadextract"
version = "0.1.0"
edition = "2021"
description = "Extract contact information from public web pages"
license = "MIT"
repository = "https://github.com/nullfeel/leadextract"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"] }
scraper = "0.20"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
colored = "2"
tokio = { version = "1", features = ["full"] }
regex = "1"
url = "2"
